# Polymarket

./: .env.example  .gitignore copy  Makefile  README.md  balance_history.txt  client.py  config.py  current_position.json  debug_api.py  main.py  pyproject.toml  requirements.txt  strategy.py
data/: prices_state.json
docs/: architecture.md
src/: discovery.py  monitor.py  notifier.py
tradingbot/: __init__.py  config.py  main.py
tradingbot/api/: __init__.py  client.py  exceptions.py  models.py
tradingbot/data/: prices_state.json
tradingbot/market/: __init__.py  discovery.py  events.py  models.py  monitor.py
tradingbot/notifications/: __init__.py  notifier.py
tradingbot/strategies/: __init__.py  base.py
tradingbot/utils/: __init__.py  decorators.py  logger.py  validators.py
